combined dev launch, font replacement

--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: "Overused-Grotesk";
+  src: url("/src/assets/fonts/OverusedGrotesk-VF.ttf") format("truetype");
+  font-weight: 100 900;
+  font-style: normal;
+}
