--- a/src/output.css
+++ b/src/output.css
@@ -558,12 +558,13 @@ video {
   display: flex;
 }
 
-.h-full {
-  height: 100%;
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
-.h-screen {
-  height: 100vh;
+.min-h-\[100svh\] {
+  min-height: 100svh;
 }
 
 .w-fit {
@@ -573,6 +574,18 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.max-w-\[80ch\] {
+  max-width: 80ch;
+}
+
+.list-inside {
+  list-style-position: inside;
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .flex-col {
@@ -587,6 +600,10 @@ video {
   justify-content: center;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .overflow-y-auto {
   overflow-y: auto;
 }
@@ -597,6 +614,40 @@ video {
 
 .pt-0 {
   padding-top: 0px;
+}
+
+.font-overused {
+  font-family: Overused Grotesk, Roboto, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-base-700 {
+  --tw-text-opacity: 1;
+  color: rgb(67 67 67 / var(--tw-text-opacity));
+}
+
+@font-face {
+  font-family: "Overused-Grotesk";
+
+  src: url("/src/assets/fonts/OverusedGrotesk-VF.ttf") format("truetype");
+
+  font-weight: 100 900;
+
+  font-style: normal;
 }
 
 @media (min-width: 768px) {
